@@ -11,6 +11,9 @@ Release date: TBA
 Core and Builtins
 -----------------
 
+- Issue #25131: Make the line number and column offset of set/dict literals and
+  comprehensions correspond to the opening brace.
+
 - Issue #25150: Hide the private _Py_atomic_xxx symbols from the public
   Python.h header to fix a compilation error with OpenMP. PyThreadState_GET()
   becomes an alias to PyThreadState_Get() to avoid ABI incompatibilies.
